--- a/xss.html
+++ b/xss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-document.onload = function () {
+window.onload = function () {
     alert("HEY 1");
     var xmlHttp = null;
 
